gitops/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: dojo
spec:
  finalizers:
  - kubernetes
