gitops/staging.yaml
---
kind: Deployment
apiVersion: apps/v1
metadata:
  name: dotnetapp
  namespace: pl-stg
spec:
  replicas: 1
  selector:
    matchLabels:
      app: dotnetapp
  template:
    spec:
      containers:
        - name: dotnetapp
          image: >-
            image-registry.openshift-image-registry.svc:5000/pltest1/dotnetapp@sha256:d926f6b39deff2659efa5a972b9bab65a952e471ed78d73a0c67210c3ec229b3
          ports:
            - containerPort: 8080
              protocol: TCP
          resources: {}
          terminationMessagePath: /dev/termination-log
          terminationMessagePolicy: File
          imagePullPolicy: Always
      restartPolicy: Always
      terminationGracePeriodSeconds: 30
      dnsPolicy: ClusterFirst
      securityContext: {}
      schedulerName: default-scheduler
      imagePullSecrets: []
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxSurge: 25%
      maxUnavailable: 25%
  revisionHistoryLimit: 10
  progressDeadlineSeconds: 600
  paused: false
