gitops/dotnet-sample-service.yml
kind: Service
apiVersion: v1
metadata:
  name: cicd-dotnet-sample
  namespace: dojo
spec:
  ports:
    - name: 8080-tcp
      protocol: TCP
      port: 8080
      targetPort: 8080
  selector:
    app: cicd-dotnet-sample
    deploymentconfig: cicd-dotnet-sample
  type: ClusterIP
  sessionAffinity: None
  ipFamilies:
    - IPv4
  ipFamilyPolicy: SingleStack
